--- a/Notes_app/public/css/style.css
+++ b/Notes_app/public/css/style.css
@@ -58,8 +58,7 @@ header {
 /* Actions Bar */
 
 .actions {
-  background-color: #f7f7f7;
-  border-bottom: 1px solid #dedfe0;
+  background-color: #254357;
   padding: 0.8rem;
 }
 
@@ -75,14 +74,14 @@ header {
 .actions__container a {
   text-decoration: none;
   background-color: #43799c;
-  color: #FFF;
+  color: #fff;
   border-radius: 5px;
   padding: 10px;
   border: none;
   transition: 0.3s;
 }
 
-.actions__container a:hover{
+.actions__container a:hover {
   opacity: 0.9;
 }
 
@@ -103,7 +102,7 @@ header {
 }
 
 .dropdown {
-  border-radius: 0;
+  border-radius: 5px;
   border: 1px solid #dedfe0;
   background: white;
   font-size: 1.4rem;
@@ -113,14 +112,15 @@ header {
 }
 
 .button {
+  margin-top: 4rem;
   background: #43799c;
   border: none;
   border-bottom: 2px solid #396684;
+  border-radius: 5px;
   color: white;
   font-size: 1.4rem;
   font-weight: 300;
   padding: 0.8rem;
-  border-radius: 5px;
   transition: background 0.3s ease;
 }
 
