--- a/Hash_Game/style.css
+++ b/Hash_Game/style.css
@@ -1,103 +1,99 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    
-    background-color: #333;
-
-    font-weight: bold;
-    font-family: sans-serif;
-
-    color: #FFF;
-}
-table,td,tr{
-    border: 1px solid white;
-    text-align: center;
-}
-td{
-    width: 70px;
-    height: 70px;
-}
-div{
-    margin: 20px 0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-button{
-    margin: 40px 0;
-    padding: 14px;
-    width: 210px;
-
-    color: #DDD;
-    
-    background-image: linear-gradient(114deg, #250e8a, #00f9f7);
-    text-decoration: none;
-
-    font-size: 20px;
-    font-weight: bolder;
-
-    border-radius: 12px;
-    border: 1px solid #DDD;
+body {
+  display: flex;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #333;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-button:hover{
-    cursor: pointer;
-    background-image: linear-gradient(114deg, #250e8a, #00f9f7, 0);
-    border: 1px solid #FFF;
-    color: white;
-    background-color: #DDD;
+.header {
+  background-image: linear-gradient(114deg, #250e8a, #00f9f7);
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  z-index: 1;
 }
 
-/******************/
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto'   ;
+h1 {
+  color: #fff;
+  margin: 20px 0;
 }
 
-.title h2{
-    color: white;
-    opacity: 0.8;
-    text-align: center;
+.area {
+  width: 300px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 30px;
+}
+.area .item {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  font-weight: bold;
+  color: #fff;
+  cursor: pointer;
+}
+.item:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
-.center{
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 2%;
+.item.t {
+  border-top: 1px solid #fff;
+}
+.item.l {
+  border-left: 1px solid #fff;
+}
+.item.r {
+  border-right: 1px solid #fff;
+}
+.item.b {
+  border-bottom: 1px solid #fff;
 }
 
-.clear{clear: both;}
-
-section.topo{
-    background-image: linear-gradient(114deg, #250e8a, #00f9f7);
-    
-    padding: 30px;
-    width: 100%;
-    margin-top: 0;
+.info {
+  width: 300px;
+  display: flex;
+  margin-top: 30px;
+  border: 1px dotted #fff;
+  padding: 10px;
+}
+.infoitem {
+  flex: 1;
+}
+.infotitulo {
+  text-align: center;
+  color: #fff;
+  margin-bottom: 10px;
+}
+.infocorpo {
+  text-align: center;
+  color: #fff;
+  font-size: 20px;
 }
 
-.logo{
-    float: left;
-}
-.menu-desktop{
-    float: right;
-}
-
-.menu-desktop li{
-    display: inline-block;
-    margin: 0 15px;
+.reset {
+  border: 1px solid #000;
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #fff;
+  padding: 10px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: filter 0.3s;
 }
 
-.menu-desktop a{
-    text-decoration: none;
-    color: white;
-    opacity: 0.8;
-
-}
-
-.menu-desktop a:hover{
-    opacity: 1;
+.reset:hover {
+  filter: brightness(0.7);
 }
